# rust_lock_benchy

./: Cargo.toml  README.md  bench.sh  run_tests.sh
benchmarks/: Darwin_20.6.0_arm64__@AppleM1_bench.txt  Darwin_20.6.0_x86_64_6_@2.20GHz_bench.txt  Darwin_20.6.0_x86_64_Intel(R)_Core(TM)_i7-8750H_CPU_@_2.20GHz_bench.txt  Linux_5.10.60-v8+_aarch64_4_@2200,0000_bench.txt  Linux_5.14.9-arch2-1_x86_64_8_@4000.0000_bench.txt
shell/: include
src/: command_line.rs  macros.rs  main.rs
