[package]
name = "test_mux"
version = "0.2.0"
authors = ["Dirk Faust <dirk@faustbande.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
futures = { version = "0.3" }
clap = { version = "2.33"}
parking_lot = { version = "0.11", optional = true }

[features]
default = ["plmutex"]
mutex = []
rwlock = []
plmutex = ["parking_lot"]
plrwlock = ["parking_lot"]
