[package]
name = "test_mux"
version = "0.3.0"
authors = ["Dirk Faust <dirk@faustbande.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
clap = { version = "2.33"}
tokio = { version = "1", features = ["full"] }
parking_lot = { version = "0.11", optional = true }

[features]
default = ["rwlock"]
mutex = []
rwlock = []
tmutex = []
trwlock = []
plmutex = ["parking_lot"]
plrwlock = ["parking_lot"]
